@@ -2,6 +2,9 @@
 
 	* src/gui/item_ammount.cpp: Item amount dialog is now skipped
 	when there is only one item on the stack.
+	* src/browserbox.cpp, src/browserbox.h, src/chat.h, src/main.cpp:
+	Added possibility of length limitation to browserbox and used it
+	for the chatlog (length set by the config option "ChatLogLength").
 
 2007-10-24  Philipp Sehmisch  <tmw@crushnet.org>
 
